--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/img/gestor-de-projeto.png"
+    />
+    <link
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
